--- a/.project
+++ b/.project
@@ -19,4 +19,16 @@
 	<natures>
 		<nature>org.python.pydev.pythonNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>duplicity.py</name>
+			<type>1</type>
+			<location>/home/ken/workspace/duplicity-src/duplicity-bin</location>
+		</link>
+		<link>
+			<name>rdiffdir.py</name>
+			<type>1</type>
+			<location>/home/ken/workspace/duplicity-src/rdiffdir</location>
+		</link>
+	</linkedResources>
 </projectDescription>
