--- a/.project
+++ b/.project
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>smart-archive-v2</name>
+	<name>duplicity-src</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.python.pydev.PyDevBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>de.loskutov.FileSync.FSBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
