fix po dir layout, update POTFILES.in, add pot file to bzr

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,34 +1,45 @@
 [encoding: UTF-8]
 
-duplicity
+duplicity-bin
 rdiffdir
-_librsyncmodule.c
-src/asyncscheduler.py
-src/backend.py
-src/collections.py
-src/commandline.py
-src/diffdir.py
-src/dup_temp.py
-src/dup_threading.py
-src/dup_time.py
-src/errors.py
-src/file_naming.py
-src/globals.py
-src/gpg.py
-src/__init__.py
-src/lazy.py
-src/librsync.py
-src/log.py
-src/manifest.py
-src/misc.py
-src/patchdir.py
-src/path.py
-src/robust.py
-src/selection.py
-src/static.py
-src/statistics.py
-src/tarfile.py
-src/tempdir.py
-src/urlparse_2_5.py
-src/util.py
-
+duplicity/_librsyncmodule.c
+duplicity/asyncscheduler.py
+duplicity/backend.py
+duplicity/collections.py
+duplicity/commandline.py
+duplicity/diffdir.py
+duplicity/dup_temp.py
+duplicity/dup_threading.py
+duplicity/dup_time.py
+duplicity/errors.py
+duplicity/file_naming.py
+duplicity/globals.py
+duplicity/gpg.py
+duplicity/__init__.py
+duplicity/lazy.py
+duplicity/librsync.py
+duplicity/log.py
+duplicity/manifest.py
+duplicity/misc.py
+duplicity/patchdir.py
+duplicity/path.py
+duplicity/robust.py
+duplicity/selection.py
+duplicity/static.py
+duplicity/statistics.py
+duplicity/tarfile.py
+duplicity/tempdir.py
+duplicity/urlparse_2_5.py
+duplicity/util.py
+duplicity/backends/botobackend.py
+duplicity/backends/cloudfilesbackend.py
+duplicity/backends/ftpbackend.py
+duplicity/backends/giobackend.py
+duplicity/backends/hsibackend.py
+duplicity/backends/imapbackend.py
+duplicity/backends/__init__.py
+duplicity/backends/localbackend.py
+duplicity/backends/rsyncbackend.py
+duplicity/backends/sshbackend.py
+duplicity/backends/tahoebackend.py
+duplicity/backends/webdavbackend.py
